[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scenes/floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/counter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/shelf.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Icons/npc3.png" type="Texture" id=4]
[ext_resource path="res://Resources/Icons/npc2.png" type="Texture" id=5]
[ext_resource path="res://Resources/Icons/npc5.png" type="Texture" id=6]
[ext_resource path="res://Resources/Prot/hero_1.png" type="Texture" id=7]
[ext_resource path="res://Resources/Objects/light.png" type="Texture" id=8]
[ext_resource path="res://Resources/Objects/exit_sign.png" type="Texture" id=9]
[ext_resource path="res://Resources/Prot/bhost.png" type="Texture" id=10]
[ext_resource path="res://Scenes/dyn_font.tres" type="DynamicFont" id=11]
[ext_resource path="res://Resources/Prot/icon_a_animation.png" type="Texture" id=12]
[ext_resource path="res://Resources/Objects/arrow.png" type="Texture" id=13]
[ext_resource path="res://Scripts/cutscenes.gd" type="Script" id=14]
[ext_resource path="res://Resources/Prot/explosion.png" type="Texture" id=15]

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=9]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=12]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=13]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 1

[sub_resource type="Animation" id=1]
resource_name = "arrow_move"
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("next:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1008, -1254 ), Vector2( -1008, -1264 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "explode"
length = 3.0
step = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("ghost1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1536, -0.25, 0, 0.25, 0, -1456, -0.25, 0, 0.25, 0, -1456, -0.25, 0, 0.25, 0, -1536, -0.25, 0, 0.25, 0, -1440, -0.25, 0, 0.25, 0, 536, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ghost1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -1520, -0.25, 0, 0.25, 0, -1400, -0.25, 0, 0.25, 0, -1400, -0.25, 0, 0.25, 0, -1528, -0.25, 0, 0.25, 0, -1632, -0.25, 0, 0.25, 0, -104, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ghost2:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -960, -0.25, 0, 0.25, 0, -1320, -0.25, 0, 0.25, 0, -1320, -0.25, 0, 0.25, 0, -1440, -0.25, 0, 0.25, 0, -1536, -0.25, 0, 0.25, 0, -1440, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ghost2:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -1576, -0.25, 0, 0.25, 0, -1520, -0.25, 0, 0.25, 0, -1520, -0.25, 0, 0.25, 0, -1432, -0.25, 0, 0.25, 0, -1528, -0.25, 0, 0.25, 0, 1936, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ghost3:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -1120, -0.25, 0, 0.25, 0, -1440, -0.25, 0, 0.25, 0, -1440, -0.25, 0, 0.25, 0, -1336, -0.25, 0, 0.25, 0, -1440, -0.25, 0, 0.25, 0, 2192, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ghost3:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -1368, -0.25, 0, 0.25, 0, -1656, -0.25, 0, 0.25, 0, -1656, -0.25, 0, 0.25, 0, -1528, -0.25, 0, 0.25, 0, -1432, -0.25, 0, 0.25, 0, -544, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("explosion:frame_coords:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 0.6, 0.7, 0.8, 0.9 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("explosion:frame_coords:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 0.6, 0.7, 0.8, 0.9 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("explosion2:frame_coords:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 0.6, 0.7, 0.8, 0.9 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("explosion2:frame_coords:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 0.6, 0.7, 0.8, 0.9 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("explosion3:frame_coords:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 0.6, 0.7, 0.8, 0.9 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("explosion3:frame_coords:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 0.6, 0.7, 0.8, 0.9 )
}

[sub_resource type="Animation" id=8]
resource_name = "eye_open"
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("eye:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.63 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "ghost_kill"
length = 3.0
step = 1.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("ghost1:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1544, -0.25, 0, 0.25, 0, -1536, -0.25, 0, 0.25, 0, -1536, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ghost1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -1888, -0.25, 0, 0.25, 0, -1624, -0.25, 0, 0.25, 0, -1520, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ghost2:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1400, -0.25, 0, 0.25, 0, -1024, -0.25, 0, 0.25, 0, -960, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ghost2:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -1888, -0.25, 0, 0.25, 0, -1640, -0.25, 0, 0.25, 0, -1576, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ghost3:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -1272, -0.25, 0, 0.25, 0, -1128, -0.25, 0, 0.25, 0, -1120, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ghost3:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -1888, -0.25, 0, 0.25, 0, -1456, -0.25, 0, 0.25, 0, -1368, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="Animation" id=14]
resource_name = "trying_to_excape"
tracks/0/type = "bezier"
tracks/0/path = NodePath("prot:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1448, -0.25, 0, 0.25, 0, -1440, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("prot:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -1528, -0.25, 0, 0.25, 0, -1648, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("prot:frame_coords:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("prot:frame_coords:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 1 )
}

[sub_resource type="Animation" id=2]
resource_name = "world_start"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("fwcolor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="cutscenes" type="Node2D"]
script = ExtResource( 14 )

[node name="bgcolor" type="ColorRect" parent="."]
margin_left = -2576.0
margin_top = -2408.0
margin_right = 4400.0
margin_bottom = 2688.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0, 0, 0, 1 )

[node name="floor" parent="." instance=ExtResource( 1 )]

[node name="shelf" parent="." instance=ExtResource( 3 )]

[node name="counter" parent="." instance=ExtResource( 2 )]

[node name="npc1" type="Sprite" parent="."]
position = Vector2( -1528, -1528 )
texture = ExtResource( 5 )

[node name="npc2" type="Sprite" parent="."]
position = Vector2( -968, -1584 )
texture = ExtResource( 4 )

[node name="npc3" type="Sprite" parent="."]
position = Vector2( -1120, -1376 )
texture = ExtResource( 6 )

[node name="ghost1" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 3 )
position = Vector2( 536, -104 )
texture = ExtResource( 10 )
vframes = 2
hframes = 8
frame = 8

[node name="ghost2" type="Sprite" parent="."]
modulate = Color( 0, 0, 1, 1 )
material = SubResource( 4 )
position = Vector2( -1440, 1936 )
texture = ExtResource( 10 )
vframes = 2
hframes = 8
frame = 8

[node name="ghost3" type="Sprite" parent="."]
modulate = Color( 0, 1, 0, 1 )
material = SubResource( 5 )
position = Vector2( 2192, -544 )
texture = ExtResource( 10 )
vframes = 2
hframes = 8
frame = 8

[node name="prot" type="Sprite" parent="."]
position = Vector2( -1446.98, -1528 )
texture = ExtResource( 7 )
vframes = 4
hframes = 20
frame = 40

[node name="Camera2D" type="Camera2D" parent="prot"]
current = true

[node name="Light2D" type="Light2D" parent="prot"]
visible = false
texture = ExtResource( 8 )

[node name="text_bg" type="Button" parent="prot"]
material = SubResource( 9 )
margin_left = -473.024
margin_top = 160.0
margin_right = 478.976
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="prot/text_bg"]
material = SubResource( 12 )
margin_left = 16.0
margin_right = 936.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 11 )
text = "You: Hello, I recieved this lantern from this Mall as a delivery. But this must have been a mistake because I have not ordered anything let alone a lantern."
align = 3
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skip_button" type="Button" parent="prot"]
margin_left = -473.024
margin_top = -256.0
margin_right = -345.024
margin_bottom = -192.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="prot/skip_button"]
material = SubResource( 13 )
margin_right = 128.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 11 )
text = "Skip"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_sign" type="TextureRect" parent="."]
margin_left = -1536.0
margin_top = -1792.0
margin_right = -1452.0
margin_bottom = -1728.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="eye" type="Sprite" parent="."]
visible = false
material = SubResource( 6 )
position = Vector2( -1440, -1704 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )
hframes = 2
frame = 1

[node name="explosion" type="Sprite" parent="."]
visible = false
material = SubResource( 7 )
position = Vector2( -1528, -1520 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 15 )
hframes = 5
frame = 4

[node name="explosion2" type="Sprite" parent="."]
visible = false
material = SubResource( 7 )
position = Vector2( -968, -1576 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 15 )
hframes = 5
frame = 4

[node name="explosion3" type="Sprite" parent="."]
visible = false
material = SubResource( 7 )
position = Vector2( -1120, -1368 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 15 )
hframes = 5
frame = 4

[node name="next" type="Sprite" parent="."]
position = Vector2( -1008, -1264 )
rotation = 3.14159
scale = Vector2( 0.125, 0.12 )
texture = ExtResource( 13 )

[node name="fwcolor" type="ColorRect" parent="."]
visible = false
margin_left = -2576.0
margin_top = -2408.0
margin_right = 4400.0
margin_bottom = 2688.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/arrow_move = SubResource( 1 )
anims/explode = SubResource( 11 )
anims/eye_open = SubResource( 8 )
anims/ghost_kill = SubResource( 10 )
anims/trying_to_excape = SubResource( 14 )
anims/world_start = SubResource( 2 )
[connection signal="pressed" from="prot/text_bg" to="." method="_on_text_bg_pressed"]
[connection signal="pressed" from="prot/skip_button" to="." method="_on_skip_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
